Archive2/b9/c6928ef954ebc6/output
main.cpp: In function 'int main(int, char**)':
main.cpp:6:18: error: 'UNIX' was not declared in this scope
     std::cout << UNIX << "\n";
                  ^
